--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "![Design preview for the Conference ticket generator coding challenge](./preview.jpg)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tailwindcss -i ./src/input.css -o ./src/output.css --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@tailwindcss/cli": "^4.0.17",
+    "html2canvas": "^1.4.1",
+    "html2canvas-pro": "^1.5.8",
     "tailwindcss": "^4.0.17"
   }
 }
